--- a/app/views/shopping_carts/cart.html.erb
+++ b/app/views/shopping_carts/cart.html.erb
@@ -1,24 +1,77 @@
-<h1>Carrinho</h1>
+<h1 class="site-title">Meu carrinho (<%= @cart_items.count %> itens)</h1>
 
-<% @cart_items.each do |item| %>
-<%= item.product.name %>
-<%= form_for item, remote: true do |f| %>
-<h4 class="text-right">Unit Price: <span style="color: green"><%= number_to_currency item.product.list_price %></span></h4>
 <div class="row">
-  <div class="col-xs-4">
-    <%= f.number_field :quantity, value: item.quantity.to_i, class: "form-control", min: 1 %>
-    <%= f.hidden_field :product_id, value: item.product.id %>
-  </div>
-  <div class="col-xs-8 text-right">
-    <div class="btn-group">
-      <%= f.submit "Update Quantity", class: "btn btn-primary" %>
-      <%= link_to "Delete", item, { data: { confirm: "Are you sure you wish to delete the product '#{item.product.name}' from your cart?" }, method: :delete, remote: true, class: "btn btn-danger" } %>
+  <section class="col-sm-12 cart-container">
+    <div class="row cart-header">
+      <div class="col-sm-6">
+        item(s)
+      </div>
+      <div class="col-sm-2 text-center">
+        preço
+      </div>
+      <div class="col-sm-2 text-center">
+        quantidade
+      </div>
+      <div class="col-sm-2 text-right">
+        subtotal
+      </div>
     </div>
-  </div>
+    <ul class="row cart-list">
+      <% @cart_items.each do |item| %>
+        <li>
+          <div class="col-sm-6">
+            <p class="product-name" href="#">
+              <span class="blue"><%= item.product.name %></span>
+              <% if item.product.brand.present? %>
+              - <%= item.product.brand %>
+              <% end %>
+            </p>
+            <% if item.product.seller.present? %>
+              <p>
+                Vendido e entrege por <span class="blue"><%= item.product.brand %></span>
+              </p>
+            <% end %>
+          </div>
+          <div class="col-sm-2 text-center">
+            <% if item.product.best_price.present? %>
+            <p class="light-gray">Por R<%= number_to_currency item.product.list_price %></p>
+            <p class="green">De R<%= number_to_currency item.product.best_price %></p>
+            <% else %>
+            <p class="green">Por R<%= number_to_currency item.product.list_price %></p>
+            <% end %>
+          </div>
+          <%= form_for item, remote: true do |f| %>
+            <%= f.hidden_field :product_id, value: item.product.id %>
+            <div class="col-sm-2">
+              <div class="form-group">
+                <label class="sr-only" for="exampleInputAmount">Quantidade</label>
+                <div class="input-group">
+                  <div class="input-group-addon"><i class="fa fa-minus"></i></div>
+                  <%= f.number_field :quantity, value: item.quantity.to_i, class: "form-control", min: 1 %>
+                  <div class="input-group-addon"><i class="fa fa-plus"></i></div>
+                </div>
+                <div class="text-center">
+                  <small><%= link_to "Remover", item, { data: { confirm: "Are you sure you wish to delete the product '#{item.product.name}' from your cart?" }, method: :delete, remote: true, class: "" } %></small>
+                </div>
+              </div>
+              <div class="hidden">
+                <%= f.submit "Update Quantity" %>
+              </div>
+            </div>
+          <% end %>
+          <div class="col-sm-2">
+            <p class="text-right green" id="cart_item_total_<%= item.product.id %>"> R<%= number_to_currency item.total %></p>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+    <div class="row cart-footer text-right">
+      Subtotal: <span id="subtotal">R<%= number_to_currency @shopping_cart.subtotal %></span>
+      <br>
+      <hr>
+      Valor Total: <span id="total">R<%= number_to_currency @shopping_cart.total %></span>
+    </div>
+  </section>
 </div>
-<h4 class="text-right">Total Price: <span style="color: green"><%= number_to_currency item.total %></span></h4>
-<% end %>
-<% end %>
-
-<%= link_to "Adicionar Produto", '/' %>
-<%= link_to "Finalizar", url_for(controller: 'shopping_carts', action: 'check_out'), method: :put %>
+<%= link_to "Cadastrar novo produto", '/', class: "btn btn-green" %>
+<%= link_to "Finalizar compra", url_for(controller: 'shopping_carts', action: 'check_out'), method: :put, class: "btn btn-green pull-right" %>
